force-app/main/default/objects/LEXMAGICMOVER__NAMNoteConversionStatus__c/LEXMAGICMOVER__NAMNoteConversionStatus__c.object-meta.xml
<CustomObject>
    <label>NAMNoteConversionStatus</label>
    <nameField>
        <label>NoteConversionStatus Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NAMNoteConversionStatus</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>