force-app/main/default/objects/LEXMAGICMOVER__NAMNoteConversionStatus__c/fields/LEXMAGICMOVER__Status__c.field-meta.xml
<CustomField>
    <fullName>LEXMAGICMOVER__Status__c</fullName>
    <label>Status</label>
    <length>10</length>
    <type>Text</type>
</CustomField>